# webpulse-audit

./: .gitignore  AI_CODING_SYSTEM_PROMPT.md  ARCHITECTURE_GUIDELINES.md  CHANGELOG.md  CODING_STANDARDS.md  IMPLEMENTATION_WORKFLOW.md  LICENSE  PERFORMANCE_AUDIT.md  PROJECT_REQUIREMENTS.md  README.md  REVIEW_CHECKLIST.md  REVIEW_REPORT.md  SECURITY_AUDIT.md  SECURITY_GUIDELINES.md  SPRINT1_SUMMARY.md  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  SPRINT4_SUMMARY.md  SPRINT5_SUMMARY.md  pyproject.toml
.ai/: architecture_review.md  roadmap.md
.github/workflows/: ci.yml
docs/specs/: 01_PROJECT_VISION.md  02_PRODUCT_REQUIREMENTS.md  03_ARCHITECTURE.md  04_MODULE_SPECIFICATIONS.md  05_PLUGIN_SYSTEM.md  06_SCORING_SYSTEM.md  07_REPORT_SCHEMA.md  08_CLI_REFERENCE.md  09_CONFIGURATION_REFERENCE.md  10_FEATURE_MATRIX.md  11_NON_GOALS.md  12_DEVELOPER_GUIDE.md  13_AI_AGENT_GUIDE.md
examples/: load_config.py  run_plugin.py
reports/: .gitkeep
src/kaydus/: __init__.py  banner.py  cli.py  commands.py  input_handler.py  system_info.py  theme.py
src/webpulse/: __init__.py
src/webpulse/cli/: main.py
src/webpulse/core/: auth.py  config.py  crawler.py  di.py  exceptions.py  plugin_loader.py  sandbox.py  sandbox_worker.py
src/webpulse/modules/: base.py
src/webpulse/reports/: reporter.py  schemas.py
src/webpulse/utils/: logging.py  network.py  parser.py
tests/: __init__.py
tests/cli/: test_cli.py  test_kaydus.py
tests/core/: test_auth.py  test_config.py  test_crawler.py  test_plugins.py
tests/modules/: test_analyzers.py
tests/reports/: test_reporter.py
tests/utils/: test_network.py
(+8 files in other folders)
