[project]
name = "webpulse"
version = "2.0.0"
description = "Enterprise-grade async website auditing framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
webpulse = "webpulse.cli.main:main"
kaydus = "kaydus.cli:main"

[project.optional-dependencies]
browser = [
    "playwright>=1.35.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "ruff>=0.0.270",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "types-pyyaml>=6.0.12",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["S101", "D100", "D104", "N818", "PLR2004", "PTH123", "SIM105", "E501", "ASYNC240", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLC0415", "S105", "PLW0603", "B905"]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["T201", "ASYNC230"]
"tests/**/*.py" = ["T201", "S101", "S105"]
"src/webpulse/cli/**/*.py" = ["T201"]
"src/kaydus/**/*.py" = ["T201", "S605", "S110", "ASYNC221", "RUF012"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
